<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/ll_headerview_textPrint"
        layout="@layout/heardview_layout" />

    <RelativeLayout
        android:id="@+id/rl_hex_on"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_headerview_textPrint"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dp" >

        <TextView
            android:id="@+id/tv_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_input"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <ToggleButton
            android:id="@+id/tb_hex_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:button="@drawable/toggle_btn"
            android:checked="false"
            android:textColor="#ffffff"
            android:textOff="@string/hex_close"
            android:textOn="@string/hex_open" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_input"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/rl_hex_on"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:hint="@string/content_to_print"
        android:textColorHint="#aaaaaa"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_input"
        android:layout_marginTop="5dp"
        android:text="@string/send_data" />

    <TextView
        android:id="@+id/tv_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_send"
        android:layout_marginTop="5dp"
        android:text="@string/tv_example" />

    <Button
        android:id="@+id/btn_print_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_example"
        android:layout_marginTop="5dp"
        android:text="@string/print_note" />

    <Button
        android:id="@+id/btn_print_codepaper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_print_note"
        android:layout_marginTop="5dp"
        android:text="@string/example_for_codepage_print" />

</RelativeLayout>