<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="5dp" >

    <ScrollView
        android:id="@+id/sv_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <include
                android:id="@+id/ll_headerview_settingactivity"
                layout="@layout/heardview_layout" />

            <TextView
                android:id="@+id/tv_device_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_headerview_settingactivity"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/printerName"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_printer_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_device_name"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/printerAddress"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_interface_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_printer_address"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp" />

            <Button
                android:id="@+id/btn_search_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/spinner_interface_type"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/openConnection"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_scan_and_connect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/btn_search_devices"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/scan_connect"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_paper_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_scan_and_connect"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/paper_width"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/rg__select_paper_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_paper_size"
                android:layout_below="@+id/tv_paper_size"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rb_58mm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="58mm" />

                <RadioButton
                    android:id="@+id/rb_80mm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="80mm" />

                <RadioButton
                    android:id="@+id/rb_100mm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="100mm" />
            </RadioGroup>

            <Button
                android:id="@+id/btn_selfprint_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rg__select_paper_size"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/settingactivity_print_test" >
            </Button>

            <Button
                android:id="@+id/btn_status_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_selfprint_test"
                android:text="@string/Settingactivity_status_test" />

            <TextView
                android:id="@+id/tv_cut_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_status_test"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/cut_test"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_cut_test"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="halfCut"
                    android:text="@string/half_cut" >
                </Button>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="allCut"
                    android:text="@string/all_cut" >
                </Button>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>