<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/ll_header_barcode"
        layout="@layout/heardview_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_header_barcode" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tv_selectbarcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/chose_barcode_type"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/rg__select_barcode_type"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_alignLeft="@id/tv_selectbarcode"
                android:layout_below="@id/tv_selectbarcode"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rb_58mm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/barcode" />

                <RadioButton
                    android:id="@+id/rb_80mm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/qrcode" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/ll_barcode_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rg__select_barcode_type"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_barcode_type"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_barcode_type"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_barcode_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_barcode_width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_barcode_type"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_barcode_width"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_barcode_width"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_input_width"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:text="2" />

                <TextView
                    android:id="@+id/tv_input_width"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="@string/data_range"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_barcode_heidth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_barcode_width"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_barcode_height"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_barcode_height"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_input_height"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:text="162" />

                <TextView
                    android:id="@+id/tv_input_height"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="@string/data_range"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_barcode_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_barcode_heidth"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_barcode_setting"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_barcode_setting"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_interface_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_barcode_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_barcode_setting"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/barcode_content"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_barcode_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_barcode_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="01051661178" />

            <LinearLayout
                android:id="@+id/ll_barcodedata_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_barcode_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_barcodedata_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/barcode_data_send" />

                <Button
                    android:id="@+id/btn_data_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/barcode_data_defalut" />
            </LinearLayout>

            <TextView
                android:id="@+id/et_barcode_example"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_barcodedata_send"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/barcode_print_show"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/ll_barcode_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_barcode_example"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_barcode_example"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/barcode_example" />

                <Button
                    android:id="@+id/btn_qrcode_example"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/qrcode_example" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_scan_print"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_barcode_example"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/scan_and_print" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>